tests/unit/evaluation/minizinc/regression/test_multioutput.err_exp
test_multioutput.mzn:4:
MiniZinc: type error: Only one output item allowed
