tests/unit/evaluation/minizinc/regression/test_multioutput.mzn
% RUNS ON mzn20_fd

output [];
output [];
solve satisfy;
